# multimedia_board

./: .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
components/iic/: CMakeLists.txt  iic.c  iic.h
components/lcd/: CMakeLists.txt  esp_lcd_panel_st7796.c  esp_lcd_panel_st7796.h  lcd.c  lcd.h
components/lvgl/: lv_conf.h
components/touch/: CMakeLists.txt  gt911.c  gt911.h
main/: CMakeLists.txt  app.h  app_display.c  app_main.c
main/benchmark/: img_benchmark_cogwheel_alpha16.c  img_benchmark_cogwheel_argb.c  img_benchmark_cogwheel_chroma_keyed.c  img_benchmark_cogwheel_indexed16.c  img_benchmark_cogwheel_rgb.c  img_benchmark_cogwheel_rgb565a8.c  lv_demo_benchmark.c  lv_demo_benchmark.h  lv_font_bechmark_montserrat_12_compr_az.c.c  lv_font_bechmark_montserrat_16_compr_az.c.c
